k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-prod-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-prod-app
  template:
    metadata:
      labels:
        app: devops-prod-app
    spec:
      containers:
        - name: devops-prod-app
          image: imranbashir340/devops-prod-app:f64b232
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
