k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-prod-service
spec:
  selector:
    app: devops-prod-app
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
